[package]
name = "sol-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
bs58 = "0.5"
base64 = "0.21"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Use compatible versions to avoid zeroize conflicts
[dependencies.ed25519-dalek]
version = "1.0"
features = ["rand"]